--- a/package.json
+++ b/package.json
@@ -1,66 +1,44 @@
 {
-  "name": "financiera_backend",
+  "name": "logistics-backend",
   "version": "1.0.0",
-  "description": "Secure Node.js/Express API for financial application",
+  "description": "Backend for logistics process automation (Hackathon project)",
   "main": "api/index.js",
   "scripts": {
     "start": "node api/index.js",
     "dev": "nodemon api/index.js",
-    "test": "jest",
     "generate-docs": "node scripts/generate-docs.js",
-    "validate-docs": "swagger-cli validate docs/openapi.json",
-    "prepare": "husky"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vingirc/financiera_backend.git"
+    "validate-docs": "swagger-cli validate docs/openapi.json"
   },
   "keywords": [
     "api",
     "express",
-    "vercel",
-    "mysql"
+    "mysql",
+    "cloudinary",
+    "logistics"
   ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/vingirc/financiera_backend/issues"
-  },
-  "homepage": "https://github.com/vingirc/financiera_backend#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "body-parser": "^2.2.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
-    "image-size": "^2.0.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "luxon": "^3.7.1",
-    "mqtt": "^5.13.3",
-    "multer": "^2.0.1",
+    "luxon": "^3.7.2",
     "mysql2": "^3.14.1",
-    "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "styled-components": "^5.3.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@apidevtools/swagger-cli": "^4.0.4",
-    "@redocly/cli": "^1.34.3",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "redoc-cli": "^0.8.5",
-    "supertest": "^7.1.1",
-    "widdershins": "^2.3.0"
+    "nodemon": "^3.1.10"
   }
 }
