--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^6.9.0",
     "passport": "^0.7.0",
